--- a/index.html
+++ b/index.html
@@ -23,22 +23,25 @@
     </header>
     <div class="container">
         <h1>To Do List</h1>
-        <section class="section">
-            <h2 class="subtitle">Things to be done</h2>
-            <ul class="task-list" id="taskList"></ul>
-            <div class="add-task-container">
-                <div class="input-container">
-                    <input type="text" class="input" id="newTaskInput" placeholder="Type new task...">
-                    <img src="assets/images/plus.svg" alt="Add Icon" class="add-icon" id="addIcon">
+        <div class="wrapper">
+            <section class="section">
+                <h2 class="subtitle">Things to be done</h2>
+                <ul class="task-list" id="taskList"></ul>
+
+                <div class="add-task-container">
+                    <div class="input-container">
+                        <input type="text" class="input" id="newTaskInput" placeholder="Type new task...">
+                        <img src="assets/images/plus.svg" alt="Add Icon" class="add-icon" id="addIcon">
+                    </div>
+                    <button class="button" id="addTaskButton">Add New</button>
                 </div>
-                <button class="button" id="addTaskButton">Add New</button>
-            </div>
-        </section>
-        <section class="section">
-            <h2 class="subtitle">Completed</h2>
-            <ul class="task-list" id="completedTaskList">
-            </ul>
-        </section>
+            </section>
+            <section class="section">
+                <h2 class="subtitle">Completed</h2>
+                <ul class="task-list" id="completedTaskList">
+                </ul>
+            </section>
+        </div>
     </div>
 
     <script src="js/script.js"></script>
